Initial rewrite using Angular

--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,13 @@
-<!DOCTYPE html>
-<html lang="de">
-  <head>
-    <title>Finn Huhne</title>
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="app">
-      <div class="card">
-        <div class="card_image">
-          <div style="padding-bottom: 100%;"></div>
-          <div class="card_image_bg"></div>
-        </div>
-        <div class="card_title">
-          <h1 class="name">Finn Huhne</h1>
-          <span class="tagline">Computer Science Expert</span>
-        </div>
-        <div class="card_icons">
-          <ul>
-            <li><a href="https://twitter.com/faketuan1">Twitter</a></li>
-            <li><a href="https://github.com/fhuhne">Github</a></li>
-            <li><a href="https://linkedin.com/in/finn-huhne">LinkedIn</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Finn Huhne</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body class="mat-typography">
+  <app-root></app-root>
+</body>
 </html>
